(v0.3.1(1)-alpha) Bug Fix: Overflow
AHHH I FOUND THE BUGGG i used a debug mode(makeshift) where i put outline to every item lol. I saw that the .acions was overflowing fixed it :pf:

--- a/src/styles/routes/landing.css
+++ b/src/styles/routes/landing.css
@@ -105,7 +105,6 @@
 }
 
 .landing .hero .terminal .titlebar .actions {
-    height: 100%;
     position: absolute;
 
     display: flex;
